<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <TextView
        android:text="@string/edit_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />
    <TextView
        android:text="@string/edit_comment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/editText2"
        android:layout_width="fill_parent"
        android:layout_height="320dp"
        android:layout_weight="0.67"
        android:gravity="top"
        android:text="日记正本" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/edit_mapText"
            android:id="@+id/editmapText"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/edit_map"
            android:id="@+id/edit_map"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:onClick="onMyButtonClick"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/edit_save"
            android:text="@string/edit_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onMyButtonClick"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/edit_giveup"
            android:text="@string/edit_giveup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onMyButtonClick"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>